fix message overflow

--- a/src/app/rooms/chat/chat.component.scss
+++ b/src/app/rooms/chat/chat.component.scss
@@ -28,10 +28,6 @@
   mat-card {
     margin-right: 0.5rem;
     margin-bottom: 0.5rem;
-
-    mat-card-content {
-      white-space: pre;
-    }
   }
 }
 
